--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Aprendiendo git en Platzi</h1>
-        <p>siguiendo los pasos de freddy</p>
+        <div id="contenedor">
+            <div id="post">
+            <h1>Aprendiendo git en Platzi</h1>
+            <p>siguiendo los pasos de freddy</p>
+            <p>que lindo margen hice</p>
+            </div>
+        </div>
     </body>
 </html>
