para que se vea bien

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     </head>
     <body>
         <div id="contenedor">
+            <div id="cabecera">
+                <h1>Cabecera</h1>
+            </div>
             <div id="post">
-            <h1>Aprendiendo git en Platzi</h1>
-            <p>siguiendo los pasos de freddy</p>
-            <p>que lindo margen hice</p>
+                <h2>Aprendiendo git en Platzi</h1>
+                <p>siguiendo los pasos de freddy</p>
+                <p>que lindo margen hice</p>
             </div>
         </div>
     </body>
