--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html>
     <head>
         <title>git en Platzi</title>
-        <link rel="stylesheet" href="Css/diseño.css">
+        <link rel="stylesheet" href="Css/Style.css">
         <meta charset="utf-8">
     </head>
     <body>
+        <center>
         <div id="contenedor">
             <div id="cabecera">
-                <h1>Cabecera</h1>
+                <p id="blog">Blog</p> 
+                <span id="subtitulo"> Creado por Manuel</span>
             </div>
             <div id="post">
                 <h2>Aprendiendo git en Platzi</h1>
@@ -16,5 +18,6 @@
                 <p>que lindo margen hice</p>
             </div>
         </div>
+        </center>
     </body>
 </html>
