--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <h2>Aprendiendo git en Platzi</h1>
                 <p>siguiendo los pasos de freddy</p>
                 <p>que lindo margen hice</p>
+                <p>parangaricutirimicuaro</p>
             </div>
         </div>
         </center>
