--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             </div>
             <div id="post">
                 <h2>Aprendiendo git en Platzi</h1>
-                <p>siguiendo los pasos de freddy</p>
-                <p>que lindo margen hice</p>
-                <p>parangaricutirimicuaro</p>
+                <p>*siguiendo los pasos de freddy</p>
+                <p>*que lindo margen hice</p>
+                <p>*parangaricutirimicuaro</p>
             </div>
         </div>
         </center>
