--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div id="contenedor">
             <div id="cabecera">
                 <p id="blog">Blog</p> 
-                <span id="subtitulo"> Creado por Manuel</span>
+                <span id="subtitulo"> Creado por Manuel 2.0</span>
             </div>
             <div id="post">
                 <h2>Aprendiendo git en Platzi</h1>
