--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
         <center>
         <div id="contenedor">
             <div id="cabecera">
-                <p id="blog">Blog</p> 
-                <span id="subtitulo"> Creado por Manuel 2.0</span>
+                <p id="blog"><img src="Css/disenar-logos-pictograma.jpg">
+                Blog <span id="subtitulo"> Creado por Manuel 2.0</span></p>
             </div>
             <div id="post">
                 <h2>Aprendiendo git en Platzi</h1>
                 <p>*siguiendo los pasos de freddy</p>
-                <p>*que lindo margen hice</p>
-                <p>*parangaricutirimicuaro</p>
+                <p>El texto informativo es aquella producción 
+                de contenido que permite al lector obtener información 
+                sobre un acontecimiento actual o pasado o cualquier otro 
+                asunto o tema percibido en periódicos, enciclopedias, 
+                revistas, etcétera.</p>
             </div>
         </div>
         </center>
