agregando icono a la página

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="ico" href="Css/joker.ico" type="image/ico" font-size="16x16">>
         <title>git en Platzi</title>
         <link rel="stylesheet" href="Css/Style.css">
         <meta charset="utf-8">
